# ghostpanel

./: BOLT_REQUIRED_NEXTSTTEPS.md  BOLT_TODO1.md  Boltfile.toml  CONTAINERS.md  Cargo.toml  DRAFT_IDEAS.md  README.md  REGISTRY.md  TODO.md  WEB_ADMIN_PLAN.md
crates/gpanel-agent/: Cargo.toml
crates/gpanel-agent/src/: main.rs
crates/gpanel-cli/: Cargo.toml
crates/gpanel-cli/src/: main.rs
crates/gpanel-core/: Cargo.toml
crates/gpanel-core/src/: api.rs  bolt.rs  container.rs  error.rs  lib.rs  quic.rs  registry.rs
crates/gpanel-proxy/: Cargo.toml
crates/gpanel-proxy/src/: http_fallback.rs  main.rs  proxy.rs  quic_server.rs
crates/gpanel-web/: Cargo.toml  index.html
crates/gpanel-web/src/: app.rs  lib.rs
crates/gpanel-web/src/auth/: mod.rs  oidc.rs
crates/gpanel-web/src/components/: layout.rs
crates/gpanel-web/src/pages/: containers.rs  dashboard.rs  gaming.rs  images.rs  login.rs  mod.rs  networks.rs  registries.rs  settings.rs  volumes.rs
crates/gpanel-web/src/services/: mod.rs
crates/gpanel-web/src/utils/: mod.rs
docs/: API.md  AZURE.md  EDGE_AGENTS.md  GITHUB.md  GOOGLE.md  SOCKET_PROXY.md  SSO.md
scripts/: bolt-deploy.sh
