[package]
name = "gpanel-agent"
version = "0.1.0"
edition = "2024"
description = "System monitoring agent for GhostPanel (port 8000)"

[[bin]]
name = "gpanel-agent"
path = "src/main.rs"

[dependencies]
gpanel-core = { path = "../gpanel-core" }

# Async runtime
tokio = { workspace = true }

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System monitoring
sysinfo = "0.30"

# Additional dependencies for registry operations
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }