[package]
name = "gpanel-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface bridge for GhostPanel (port 9000)"

[[bin]]
name = "gpanel-cli"
path = "src/main.rs"

[dependencies]
gpanel-core = { path = "../gpanel-core" }

# Async runtime
tokio = { workspace = true }

# Web server
axum = { workspace = true }
tower = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.0", features = ["derive"] }