[package]
name = "gpanel-core"
version = "0.1.0"
edition = "2024"
description = "Core types and utilities for GhostPanel"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Future QUIC dependencies (placeholder for custom GQUIC library)
# quinn = { version = "0.11", optional = true }
# rustls = { version = "0.21", optional = true }
# http = { version = "0.2", optional = true }

# Bolt integration (optional)
bolt = { git = "https://github.com/CK-Technology/bolt", optional = true }

[features]
default = []
bolt-integration = ["dep:bolt"]
# quic = []  # Will be enabled when GQUIC library is ready