[package]
name = "gpanel-core"
version = "0.1.0"
edition = "2024"
description = "Core types and utilities for GhostPanel"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Registry and container image support
reqwest = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
oci-spec = { workspace = true }
urlencoding = "2.1"

# Future QUIC dependencies (placeholder for custom GQUIC library)
# quinn = { version = "0.11", optional = true }
# rustls = { version = "0.21", optional = true }
# http = { version = "0.2", optional = true }

# Bolt integration (optional)
bolt = { git = "https://github.com/CK-Technology/bolt", optional = true }

[features]
default = []
bolt-integration = ["dep:bolt"]
# quic = []  # Will be enabled when GQUIC library is ready