[package]
name = "gpanel-web"
version = "0.1.0"
edition = "2024"
description = "Leptos-based web interface for GhostPanel"

[lib]
crate-type = ["cdylib"]

[dependencies]
gpanel-core = { path = "../gpanel-core" }

# Leptos framework
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

# Web dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
gloo-net = { version = "0.4", features = ["http"] }
reqwest = { version = "0.12", features = ["json"] }

# Authentication & JWT
jsonwebtoken = "9.1"
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }

# Local storage for tokens
gloo-storage = "0.3"

# Utility crates
uuid = { version = "1.0", features = ["v4", "js"] }
thiserror = "1.0"
urlencoding = "2.1"